--- a/clusters/omv/apps/volsync-system/volsync/mutatingadmissionpolicy.yaml
+++ b/clusters/omv/apps/volsync-system/volsync/mutatingadmissionpolicy.yaml
@@ -1,6 +1,5 @@
 ---
-# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.0/mutatingadmissionpolicy-admissionregistration-v1alpha1.json
-apiVersion: admissionregistration.k8s.io/v1alpha1
+apiVersion: admissionregistration.k8s.io/v1beta1
 kind: MutatingAdmissionPolicy
 metadata:
   name: volsync-mover
