(chore): update structure

--- a/clusters/talos/apps/kustomization.yaml
+++ b/clusters/talos/apps/kustomization.yaml
@@ -6,6 +6,14 @@ helmGlobals:
 
 helmCharts:
   - name: argocd-app-of-app
-    valuesFile: ./values.yaml
+    valuesFile: ./common-values.yaml
+    additionalValuesFiles:
+      - ./00-crds-and-secrets.yaml
+      - ./02-secret-stores.yaml
+      # - ./05-storage-and-certificate.yaml
+      # - ./10-networking.yaml
+      # - ./15-database-operator.yaml
+      # - ./16-database-clusters.yaml
+      # - ./20-applications.yaml
 
 patches: []
