(chore): enable storage apps

--- a/clusters/talos/apps/kustomization.yaml
+++ b/clusters/talos/apps/kustomization.yaml
@@ -10,7 +10,7 @@ helmCharts:
     additionalValuesFiles:
       - ./00-crds-and-secrets.yaml
       - ./02-secret-stores.yaml
-      # - ./05-storage-and-certificate.yaml
+      - ./05-storage-and-certificate.yaml
       # - ./10-networking.yaml
       # - ./15-database-operator.yaml
       # - ./16-database-clusters.yaml
