--- a/clusters/talos/bootstrap/os/talconfig.yaml
+++ b/clusters/talos/bootstrap/os/talconfig.yaml
@@ -37,6 +37,11 @@ nodes:
         mtu: 1500
         vip:
           ip: "10.30.30.150"
+    schematic:
+      customization:
+        systemExtensions:
+          officialExtensions:
+            - siderolabs/nfsrahead
   - hostname: "k8s-2-ser"
     ipAddress: "10.30.30.22"
     installDisk: /dev/sda
@@ -54,6 +59,11 @@ nodes:
         mtu: 1500
         vip:
           ip: "10.30.30.150"
+    schematic:
+      customization:
+        systemExtensions:
+          officialExtensions:
+            - siderolabs/nfsrahead
   - hostname: "k8s-3-pxm"
     ipAddress: "10.30.30.23"
     installDiskSelector:
@@ -82,6 +92,7 @@ nodes:
             - siderolabs/nvidia-container-toolkit-production
             - siderolabs/nvidia-open-gpu-kernel-modules-production
             - siderolabs/qemu-guest-agent
+            - siderolabs/nfsrahead
 
 # Global patches
 patches:
