--- a/components/rook-ceph/rook-ceph-cluster/http-route.yaml
+++ b/components/rook-ceph/rook-ceph-cluster/http-route.yaml
@@ -10,6 +10,7 @@ metadata:
     gethomepage.dev/enabled: "true"
     gethomepage.dev/group: Ingress
     gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/rook-ceph.png
+    argocd.argoproj.io/ignore-healthcheck: "true"
 spec:
   parentRefs:
     - name: ${GATEWAY_NAME}
