(chore): enable networking

--- a/clusters/talos/apps/kustomization.yaml
+++ b/clusters/talos/apps/kustomization.yaml
@@ -11,7 +11,7 @@ helmCharts:
       - ./00-crds-and-secrets.yaml
       - ./02-secret-stores.yaml
       - ./05-storage-and-certificate.yaml
-      # - ./10-networking.yaml
+      - ./10-networking.yaml
       # - ./15-database-operator.yaml
       # - ./16-database-clusters.yaml
       # - ./20-applications.yaml
