--- a/components/network/envoy-gateway-crds/kustomization.yaml
+++ b/components/network/envoy-gateway-crds/kustomization.yaml
@@ -15,4 +15,4 @@ helmCharts:
           enabled: true
           channel: experimental   # Available options: standard, experimental
         envoyGateway:
-          enabled: true
+          enabled: false
