(chore): enable database

--- a/clusters/talos/apps/kustomization.yaml
+++ b/clusters/talos/apps/kustomization.yaml
@@ -12,8 +12,8 @@ helmCharts:
       - ./02-secret-stores.yaml
       - ./05-storage-and-certificate.yaml
       - ./10-networking.yaml
-      # - ./15-database-operator.yaml
-      # - ./16-database-clusters.yaml
+      - ./15-database-operator.yaml
+      - ./16-database-clusters.yaml
       # - ./20-applications.yaml
 
 patches: []
