--- a/clusters/talos/apps/default/cloudnative-cluster/cluster.yaml
+++ b/clusters/talos/apps/default/cloudnative-cluster/cluster.yaml
@@ -56,13 +56,13 @@ spec:
     endpointURL: https://s3.omv.v3socp.boo
     s3Credentials:
       accessKeyId:
-        name: garage
+        name: garage-access-keys
         key: ACCESS_KEY_ID
       secretAccessKey:
-        name: garage
+        name: garage-access-keys
         key: ACCESS_SECRET_KEY
       region:
-        name: garage
+        name: garage-access-keys
         key: REGION
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/postgresql.cnpg.io/scheduledbackup_v1.json
