--- a/components/default/pgadmin/kustomization.yaml
+++ b/components/default/pgadmin/kustomization.yaml
@@ -5,6 +5,7 @@ namespace: default
 resources:
   - ./externalsecret.yaml
   - ./externalsecret-oauth.yaml
+  - ./http-route.yaml
 components:
   - ../../volsync-system/volsync-replication
 helmCharts:
