--- a/components/default/zigbee2mqtt/kustomization.yaml
+++ b/components/default/zigbee2mqtt/kustomization.yaml
@@ -4,6 +4,7 @@ components:
   - ../../volsync-system/volsync-replication
 resources:
   - ./externalsecret.yaml
+  - ./http-route.yaml
 
 helmCharts:
   - name: app-template
