--- a/components/default/audiobookshelf/kustomization.yaml
+++ b/components/default/audiobookshelf/kustomization.yaml
@@ -1,6 +1,8 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+resources:
+  - ./http-route.yaml
 components:
   - ../../volsync-system/volsync-replication
 
