--- a/components/default/donetick/kustomization.yaml
+++ b/components/default/donetick/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./externalsecret.yaml
+  - ./http-route.yaml
 
 configMapGenerator:
   - name: donetick-config
