--- a/components/default/gotify/pvc.yaml
+++ b/components/default/gotify/pvc.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: onstar2mqtt-config
+  name: gotify
   labels:
-    app.kubernetes.io/instance: onstar2mqtt
-    app.kubernetes.io/name: onstar2mqtt
+    app.kubernetes.io/instance: gotify
+    app.kubernetes.io/name: gotify
 spec:
   accessModes:
     - ReadWriteOnce
   storageClassName: ceph-block
   resources:
     requests:
-      storage: 500Mi
+      storage: 1Gi
