--- a/components/default/influxdb/kustomization.yaml
+++ b/components/default/influxdb/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 namespace: default
 resources:
   - ./externalsecret.yaml
+  - ./pvc.yaml
 components:
   - ../../volsync-system/volsync-replication
 helmCharts:
