--- a/components/default/jellyseerr/kustomization.yaml
+++ b/components/default/jellyseerr/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - ./pvc.yaml
   - ./externalsecret.yaml
+  - ./http-route.yaml
 components:
   - ../../volsync-system/volsync-replication
 helmCharts:
