--- a/components/default/radarr/kustomization.yaml
+++ b/components/default/radarr/kustomization.yaml
@@ -2,7 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 components:
   - ../../volsync-system/volsync-replication
-
+resources:
+  - ./http-route.yaml
 helmCharts:
   - name: app-template
     releaseName: radarr
