--- a/components/downloads/prowlarr/kustomization.yaml
+++ b/components/downloads/prowlarr/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 namespace: downloads
 resources:
   - ./externalsecret.yaml
+  - ./http-route.yaml
 helmCharts:
   - name: app-template
     releaseName: prowlarr
