--- a/components/observability/scrutiny-app/kustomization.yaml
+++ b/components/observability/scrutiny-app/kustomization.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: observability
 resources:
-  - ./config-pvc.yaml
+  - ./pvc.yaml
   - ./externalsecret.yaml
   - ./http-route.yaml
 
