--- a/components/default/kavita/values.yaml
+++ b/components/default/kavita/values.yaml
@@ -51,5 +51,5 @@ persistence:
     globalMounts:
       - path: /media
     type: nfs
-    server: ${SECRET_NAS_ADDRESS}
+    server: synology.a113.internal
     path: "/volume1/media/Ebooks"
