--- a/components/default/papra/values.yaml
+++ b/components/default/papra/values.yaml
@@ -59,5 +59,5 @@ persistence:
     globalMounts:
       - path: /documents
     type: nfs
-    server: ${SECRET_NAS_ADDRESS}
+    server: synology.a113.internal
     path: "/volume1/media/k8s-data/papra"
