--- a/components/downloads/qbittorrent/values.yaml
+++ b/components/downloads/qbittorrent/values.yaml
@@ -146,7 +146,7 @@ persistence:
           - path: /config
   media:
     type: nfs
-    server: ${SECRET_NAS_ADDRESS}
+    server: synology.a113.internal
     path: "/volume1/media"
     advancedMounts:
       qbittorrent:
