(chore): add inclued crds

--- a/components/kube-system/node-feature-discovery/kustomization.yaml
+++ b/components/kube-system/node-feature-discovery/kustomization.yaml
@@ -8,6 +8,7 @@ helmCharts:
   - name: node-feature-discovery
     releaseName: node-feature-discovery
     namespace: kube-system
+    includeCRDs: true
     repo: oci://registry.k8s.io/nfd/charts
     version: 0.18.1
     valuesFile: values.yaml
